tests/functional/lang/eval-fail/flake-ref-to-string-negative-integer.err.exp
error:
       … while calling the 'seq' builtin
         at /pwd/lang/eval-fail/flake-ref-to-string-negative-integer.nix:4:1:
            3| in
            4| builtins.seq n (
             | ^
            5|   builtins.flakeRefToString {

       … while calling the 'flakeRefToString' builtin
         at /pwd/lang/eval-fail/flake-ref-to-string-negative-integer.nix:5:3:
            4| builtins.seq n (
            5|   builtins.flakeRefToString {
             |   ^
            6|     type = "github";

       error: negative value given for flake ref attr repo: -1
